Several build system changes and fixes and gitignore improvements. Added ReleaseNative build type and changed Compact to ReleaseCompact.

--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,7 @@ Makefile
 Doxyfile
 /docs/generated
 /docs/uml/**/*.png
-/TimberWolf.cbp
-/TimberWolf.layout
+TimberWolf.cbp
+TimberWolf.layout
+vgcore.*
+cachegrind.out.*
