Lots of work on the platform-independent rendering frontend. Removed some code related to clearing the screen that should be handled by the custom GameStates manually.

--- a/TimberWolf.hpp.in
+++ b/TimberWolf.hpp.in
@@ -4,3 +4,4 @@
 #define TW_VERSION_MINOR @TimberWolf_VERSION_MINOR@
 #define TW_VERSION_PATCH @TimberWolf_VERSION_PATCH@
 #define TW_VERSION "@PROJECT_VERSION@"
+#define TW_BUILD_TYPE "@CMAKE_BUILD_TYPE@"
