Added Catch2-based test suite, including a simple test, and integration into the build system.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,12 @@ cmake_install.cmake
 install_manifest.txt
 CPackConfig.cmake
 CPackSourceConfig.cmake
+CTestTestfile.cmake
+DartConfiguration.tcl
+Testing
+twtsuite
+twtsuite.exe
+twtsuite_include-*.cmake
 /include/TimberWolf/TimberWolf.hpp
 TimberWolf.pc
 TimberWolfConfig.cmake
